Add L2 tutorial example

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,24 @@
 start_here/*
 !start_here/*.sv
 !start_here/README.md
+waves.shm/
+xcelium.d/
+xrun.history
+xrun.key
+xrun.log
+xprof/*
+!xprof/*.sv
+!xprof/run
+!xprof/clean
+
+vnc_logs/
+xprof_report_dir/
+*.swp
+*.ucm
+*.ucd
+*.vcd
+*.log
+*.out
+*~
+todo
+
